--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -106,6 +106,45 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-03-30">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-3-30-free-node-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/610552e86a81521a4f6a2a8194cb9de6.webp" alt="「3月30日」最高速度21.8M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-3-30-free-node-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月30日」最高速度21.8M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了日本、美国、新加坡、香港、加拿大、欧洲、韩国等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-03-29">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-3-29-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/610552e86a81521a4f6a2a8194cb9de6.webp" alt="「3月29日」最高速度18.2M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-3-29-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月29日」最高速度18.2M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了新加坡、韩国、香港、欧洲、加拿大、美国、日本等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-03-28">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-3-28-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/556b5dbcfe6584f0352cb6fadde73408.webp" alt="「3月28日」最高速度22.3M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-3-28-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月28日」最高速度22.3M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了欧洲、日本、加拿大、新加坡、韩国、美国、香港等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-03-27">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-3-27-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -197,45 +236,6 @@
                                     <p>这一次的节点更新覆盖了香港、欧洲、美国、日本、新加坡、韩国、加拿大等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-03-20">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-3-20-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/576e2849d154a2569f03a0e1904fcf9e.webp" alt="「3月20日」最高速度21.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-3-20-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月20日」最高速度21.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了加拿大、香港、欧洲、新加坡、韩国、日本、美国等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-03-19">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-3-19-node-share.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/d21208fec1e7d0709067a1f22cc3ab5b.webp" alt="「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-3-19-node-share.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了韩国、欧洲、香港、美国、新加坡、日本、加拿大等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-03-18">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-3-18-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/576e2849d154a2569f03a0e1904fcf9e.webp" alt="「3月18日」最高速度20.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-3-18-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月18日」最高速度20.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了韩国、美国、加拿大、欧洲、新加坡、香港、日本等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
                             <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                        </div>
                     </div>
@@ -246,16 +246,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-67778.htm" title="宠物打疫苗前需要做什么检查（宠物医院打疫苗前做检查要钱吗）">宠物打疫苗前需要做什么检查（宠物医院打疫苗前做检查要钱吗）</a></li>
-                        <li class="py-2"><a href="/news/article-80474.htm" title="springcloud解决使用feign调用服务 header参数传递的问题">springcloud解决使用feign调用服务 header参数传递的问题</a></li>
-                        <li class="py-2"><a href="/news/article-86160.htm" title="浅谈分布式一致性协议之3PC">浅谈分布式一致性协议之3PC</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-1-node-share-links.htm" title="「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-76392.htm" title="北京宠物医院价格表（北京宠物医院价格表图片）">北京宠物医院价格表（北京宠物医院价格表图片）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-26-node-share.htm" title="「3月26日」最高速度22.2M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「3月26日」最高速度22.2M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-8-free-high-speed-nodes.htm" title="「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-84718.htm" title="1970年农历4月27日（1970年农历4月27日阳历是多少）">1970年农历4月27日（1970年农历4月27日阳历是多少）</a></li>
                         <li class="py-2"><a href="/news/article-88311.htm" title="动物疫苗注射工作注意事项有哪些（动物疫苗注射工作注意事项有哪些要求）">动物疫苗注射工作注意事项有哪些（动物疫苗注射工作注意事项有哪些要求）</a></li>
-                        <li class="py-2"><a href="/news/article-66499.htm" title="免费领养宠物狗的平台有哪些（免费领养宠物狗的官网）">免费领养宠物狗的平台有哪些（免费领养宠物狗的官网）</a></li>
-                        <li class="py-2"><a href="/news/article-67133.htm" title="上海宠物领养救助站是真的吗（上海宠物领养机构）">上海宠物领养救助站是真的吗（上海宠物领养机构）</a></li>
-                        <li class="py-2"><a href="/news/article-84003.htm" title="猫粮所有品牌app下载大全（猫粮品牌十大排行知乎）">猫粮所有品牌app下载大全（猫粮品牌十大排行知乎）</a></li>
+                        <li class="py-2"><a href="/news/article-67777.htm" title="合肥宠物领养中心官网地址 合肥宠物领养中心官网地址查询">合肥宠物领养中心官网地址 合肥宠物领养中心官网地址查询</a></li>
+                        <li class="py-2"><a href="/news/article-73012.htm" title="VUE3开发问题总结(数据更新和页面显示问题)">VUE3开发问题总结(数据更新和页面显示问题)</a></li>
+                        <li class="py-2"><a href="/news/article-73670.htm" title="pip 查看要安装的包所有版本（所有包版本）">pip 查看要安装的包所有版本（所有包版本）</a></li>
+                        <li class="py-2"><a href="/news/article-82572.htm" title="C# 一维数组如何快速实现数组元素的数据类型的转换">C# 一维数组如何快速实现数组元素的数据类型的转换</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-7-free-subscribe-node.htm" title="「3月7日」最高速度22.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「3月7日」最高速度22.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-89061.htm" title="常州宠物医院电话（常州市宠物医院电话）">常州宠物医院电话（常州市宠物医院电话）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-28-free-node-subscribe-links.htm" title="「3月28日」最高速度22.3M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「3月28日」最高速度22.3M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -267,7 +267,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
