--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -309,7 +309,61 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://ccc.ssy614.com/#/register?code=" data-type="Shanshui" data-code="FDn6IwOG" target="_blank"><b>山水云</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://www.dginv.click/#/register?code=" data-type="Gougou" data-code="G6yPcu5e" target="_blank"><b>狗狗加速</b></a>
+                                </div>
+                                <div class="panel-body">
+                                    <p>?狗狗加速双11双12黑五优惠 ?</p><p>? 套餐优惠码（下单时输入）</p><p>月付/季付套餐 85折 ➡️ 优惠码 “2411”</p><p>半年付立减 20元 ➡️ 优惠码 “20”</p><p>年付立减 30元 ➡️ 优惠码 “30”</p><p>2年付立减 40元 ➡️ 优惠码 “40”</p><p><br></p><p>? 充值返现</p><p>充值超过100元，自动赠送10元：</p><p>充100得110，充200得220，以此类推（? 充值路径：左侧菜单-&gt;个人中心-&gt;充值 ，打开余额自动续费，支付无手续费）</p><p><br></p><p>⏰ 截止至 12月12日 24时 立即下单，锁定年度最低价！</p>
+                                    <dl>
+                                        <dt>资费</dt>
+                                                                                <dd>
+                                            <p>
+                                                <label>标准套餐(160G)：</label> ¥15.80/月付。 
+                                                                                                流量160G/月; 
+                                                                                                半年付9.5折，年付9折; 
+                                                                                                集群负载均衡; 
+                                                                                                限速150M，无审计; 
+                                                                                                解锁流媒体及ChatGPT; 
+                                                                                                不限设备数，全平台通用; 
+                                                                                                当月流量用完请买流量重制套餐重制使用流量; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>高级套餐(200G)：</label> ¥20.80/月付。 
+                                                                                                流量200G/月; 
+                                                                                                半年付9折，年付8折; 
+                                                                                                集群负载均衡; 
+                                                                                                不限速，无审计; 
+                                                                                                高速专线，极低延迟; 
+                                                                                                全球独家Hysteria协议; 
+                                                                                                解锁流媒体及ChatGPT; 
+                                                                                                不限设备数，全平台通用; 
+                                                                                                在线客服，远程技术支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>豪华套餐(500G)：</label> ¥39.80/月付。 
+                                                                                                流量500G/月; 
+                                                                                                年付75折，2年付6折; 
+                                                                                                集群负载均衡; 
+                                                                                                不限速，无审计; 
+                                                                                                不限速，无审计; 
+                                                                                                全球独家Hysteria2协议; 
+                                                                                                解锁流媒体及ChatGPT; 
+                                                                                                不限设备数，全平台通用; 
+                                                                                            </p>
+                                        </dd>
+                                                                            </dl>
+                                </div>
+                                <div class="panel-footer">
+                                    <a href="javascript:;" class="js_to" data-url="https://www.dginv.click/#/register?code=" data-type="Gougou" data-code="G6yPcu5e" target="_blank">点击查看</a>
+                                </div>
+                            </div>
+                            <hr />
+                                                        <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <a href="javascript:;" class="js_to" data-url="https://sy.wgkzg.com/#/register?code=" data-type="Shanshui" data-code="FDn6IwOG" target="_blank"><b>山水云</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -378,7 +432,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://ccc.ssy614.com/#/register?code=" data-type="Shanshui" data-code="FDn6IwOG" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://sy.wgkzg.com/#/register?code=" data-type="Shanshui" data-code="FDn6IwOG" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -568,16 +622,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-74341.htm" title="猫咪3针疫苗多少钱 猫咪3针疫苗多少钱一针">猫咪3针疫苗多少钱 猫咪3针疫苗多少钱一针</a></li>
-                        <li class="py-2"><a href="/news/article-80474.htm" title="springcloud解决使用feign调用服务 header参数传递的问题">springcloud解决使用feign调用服务 header参数传递的问题</a></li>
-                        <li class="py-2"><a href="/news/article-85430.htm" title="restTemplate配置及使用">restTemplate配置及使用</a></li>
-                        <li class="py-2"><a href="/news/article-67132.htm" title="JSON  传输数据出现415错误 Content type &#8216;application/xml;charset=UTF-8&#8217; not supported">JSON  传输数据出现415错误 Content type &#8216;application/xml;charset=UTF-8&#8217; not supported</a></li>
-                        <li class="py-2"><a href="/news/article-80475.htm" title="FP-growth算法以及代码实现">FP-growth算法以及代码实现</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-28-free-node-subscribe-links.htm" title="「3月28日」最高速度22.3M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「3月28日」最高速度22.3M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-11-node-share.htm" title="「3月11日」最高速度21.8M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「3月11日」最高速度21.8M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-88310.htm" title="【Java分享客栈】一文搞定京东零售开源的AsyncTool，彻底解决异步编排问题">【Java分享客栈】一文搞定京东零售开源的AsyncTool，彻底解决异步编排问题</a></li>
-                        <li class="py-2"><a href="/news/article-71684.htm" title="纳尼！ROOT修改权限不足？提示Operation not permitted？">纳尼！ROOT修改权限不足？提示Operation not permitted？</a></li>
-                        <li class="py-2"><a href="/news/article-71036.htm" title="广州哪里买狗狗好（广州哪里买狗最便宜）">广州哪里买狗狗好（广州哪里买狗最便宜）</a></li>
+                        <li class="py-2"><a href="/news/article-67777.htm" title="合肥宠物领养中心官网地址 合肥宠物领养中心官网地址查询">合肥宠物领养中心官网地址 合肥宠物领养中心官网地址查询</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-19-node-share.htm" title="「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-68413.htm" title="狗粮10大品牌排行榜（狗粮品牌前十名）">狗粮10大品牌排行榜（狗粮品牌前十名）</a></li>
+                        <li class="py-2"><a href="/news/article-89763.htm" title="三国杀武将登场特效是什么样子的（三国杀武将限定技）">三国杀武将登场特效是什么样子的（三国杀武将限定技）</a></li>
+                        <li class="py-2"><a href="/news/article-89061.htm" title="常州宠物医院电话（常州市宠物医院电话）">常州宠物医院电话（常州市宠物医院电话）</a></li>
+                        <li class="py-2"><a href="/news/article-76392.htm" title="北京宠物医院价格表（北京宠物医院价格表图片）">北京宠物医院价格表（北京宠物医院价格表图片）</a></li>
+                        <li class="py-2"><a href="/news/article-72343.htm" title="element中el-cascader的使用">element中el-cascader的使用</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-2-node-share-links.htm" title="「4月2日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「4月2日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-77747.htm" title="上海宠物医院有多少家分院啊（上海宠物医院知乎）">上海宠物医院有多少家分院啊（上海宠物医院知乎）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-4-node-share-links.htm" title="「3月4日」最高速度23M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「3月4日」最高速度23M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -589,7 +643,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
